--- a/.github/workflows/handle-push.yml
+++ b/.github/workflows/handle-push.yml
@@ -15,11 +15,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Check for submodule changes
-        run: |
-          git pull --recurse-submodules
-          git submodule update --init --recursive
-
       - name: Get last commit message
         id: last_commit
         run: |
@@ -29,6 +24,12 @@ jobs:
       - name: Amend commit message with [update main] (check if prefix is missing)
         if: startsWith(steps.last_commit.outputs.message, '[update main] => ') == false
         run: |
+            AUTHOR_NAME=$(git log -1 --pretty=format:'%an')
+            AUTHOR_EMAIL=$(git log -1 --pretty=format:'%ae')
+
+            git config user.name "$AUTHOR_NAME"
+            git config user.email "$AUTHOR_EMAIL"
+
             NEW_COMMIT_MSG="[update main] => $COMMIT_MSG"
             git commit --amend -m "$COMMIT_MSG"
             echo "New commit message: $COMMIT_MSG"
