--- a/.github/workflows/handle-push.yml
+++ b/.github/workflows/handle-push.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Get last commit message
         id: last_commit
         run: |
-          COMMIT_MSG=$(git log origin/main -1 --pretty=%B | tr '\n' ' ')
+          COMMIT_MSG=$(git log -1 --pretty=%B)
           echo "message=$COMMIT_MSG" >> $GITHUB_OUTPUT
 
       - name: Amend commit message with [update main] (check if prefix is missing)
@@ -32,4 +32,4 @@ jobs:
 
             NEW_COMMIT_MSG="[update main] => $COMMIT_MSG"
             git commit --amend -m "$NEW_COMMIT_MSG"
-            echo "New commit message: $NEW_COMMIT_MSG"
+            git push --force-with-lease origin main
