--- a/.github/workflows/handle-push.yml
+++ b/.github/workflows/handle-push.yml
@@ -24,9 +24,12 @@ jobs:
       - name: Amend commit message with [update main] (check if prefix is missing)
         if: startsWith(env.message, '[update main]') == false
         run: |
-            git config user.email "actions@github.com"
-            git config user.name "GitHub Actions - Update Main"
+            AUTHOR_NAME=$(git log -1 --pretty=format:'%an')
+            AUTHOR_EMAIL=$(git log -1 --pretty=format:'%ae')
+
+            git config user.name "$AUTHOR_NAME"
+            git config user.email "$AUTHOR_EMAIL"
 
             NEW_COMMIT_MSG="[update main] => ${{ env.message }}"
             git commit --amend -m "$NEW_COMMIT_MSG"
-            git push --force-with-lease origin main
+            git push
