commit policy ga v11

--- a/.github/workflows/handle-push.yml
+++ b/.github/workflows/handle-push.yml
@@ -32,4 +32,6 @@ jobs:
 
             NEW_COMMIT_MSG="[update main] => ${{ env.message }}"
             git commit --amend -m "$NEW_COMMIT_MSG"
-            git push
+            git push --force-with-lease
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
