--- a/.github/workflows/handle-push.yml
+++ b/.github/workflows/handle-push.yml
@@ -30,7 +30,7 @@ jobs:
             git config user.email "$AUTHOR_EMAIL"
 
             NEW_COMMIT_MSG="[update main] => ${{ env.message }}"
-            git commit --amend -m "$NEW_COMMIT_MSG" --no-edit
-            git push --force
+            git commit --amend -m "$NEW_COMMIT_MSG"
+            git push --force-with-lease origin main
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ORG_PAT }}
