commit policy ga v16

--- a/.github/workflows/handle-push.yml
+++ b/.github/workflows/handle-push.yml
@@ -15,21 +15,19 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Get last commit message
+      - name: Set up Git    
         run: |
-          COMMIT_MSG=$(git log -1 --pretty=%B)
-          echo "message=$COMMIT_MSG" >> $GITHUB_ENV
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
 
-      - name: Amend commit message with [update main] (check if prefix is missing)
-        if: startsWith(env.message, '[update main]') == false
+      - name: Amend commit message with [update main]
         run: |
-            AUTHOR_NAME=$(git log -1 --pretty=format:'%an')
-            AUTHOR_EMAIL=$(git log -1 --pretty=format:'%ae')
-
-            git config user.name "$AUTHOR_NAME"
-            git config user.email "$AUTHOR_EMAIL"
-
-            NEW_COMMIT_MSG="[update main] => ${{ env.message }}"
+            COMMIT_MSG=$(git log -1 --pretty=%B)
+            if [ "${COMMIT_MSG:0:13}" = "[update main]" ]; then
+                echo "Commit message already prefixed, skipping amendment."
+                exit 0
+            fi
+            NEW_COMMIT_MSG="[update main] => $COMMIT_MSG"
             git commit --amend -m "$NEW_COMMIT_MSG"
             git push --force-with-lease origin main
         env:
