--- a/.github/workflows/handle-push.yml
+++ b/.github/workflows/handle-push.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.ORG_PAT }}
 
       - name: Set up Git    
         run: |
@@ -30,5 +31,3 @@ jobs:
             NEW_COMMIT_MSG="[update main] => $COMMIT_MSG"
             git commit --amend -m "$NEW_COMMIT_MSG"
             git push --force-with-lease origin main
-        env:
-          GITHUB_TOKEN: ${{ secrets.ORG_PAT }}
