--- a/.github/workflows/handle-push.yml
+++ b/.github/workflows/handle-push.yml
@@ -23,11 +23,6 @@ jobs:
 
       - name: Amend commit message with [update main]
         run: |
-            COMMIT_MSG=$(git log -1 --pretty=%B)
-            if [ "${COMMIT_MSG:0:13}" = "[update main]" ]; then
-                echo "Commit message already prefixed, skipping amendment."
-                exit 0
-            fi
-            NEW_COMMIT_MSG="[update main] => $COMMIT_MSG"
+            COMMIT_MSG="[update main] => $(git log -1 --pretty=%B)"
             git commit --amend -m "$NEW_COMMIT_MSG"
             git push --force-with-lease origin main
