--- a/.github/workflows/handle-push.yml
+++ b/.github/workflows/handle-push.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Amend commit message with [update main]
         run: |
             COMMIT_MSG="[update main] => $(git log -1 --pretty=%B)"
-            git commit --amend -m "$NEW_COMMIT_MSG"
+            git commit --amend -m "$COMMIT_MSG"
             git push --force-with-lease origin main
