--- a/.github/workflows/handle-push.yml
+++ b/.github/workflows/handle-push.yml
@@ -26,5 +26,5 @@ jobs:
             COMMIT_MSG=$(git log -1 --pretty=%B)
             TRUE_COMMIT_MSG=$(echo "$COMMIT_MSG" | sed 's/\[update main\] => //g')
             FINAL_COMMIT_MSG="[update main] => $TRUE_COMMIT_MSG"
-            git commit --amend -m "$FINAL_COMMIT_MSG"
+            git commit --amend -m "$FINAL_COMMIT_MSG" --no-edit
             git push --force-with-lease origin main
